feat: route to update pokemons life after battle
